# pirogue

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.ci/: setup_db.sh
.deploy/: deploy_to_pypi.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  test.yml  wheel.yml
_autosummary/: pirogue.MultipleInheritance.html  pirogue.SimpleJoins.html  pirogue.SingleInheritance.html  pirogue.exceptions.html  pirogue.information_schema.html  pirogue.utils.html  pirogue.utils.insert_command.html  pirogue.utils.select_columns.html  pirogue.utils.table_parts.html  pirogue.utils.update_command.html
_modules/: index.html
_modules/pirogue/: multiple_inheritance.html  simple_joins.html  single_inheritance.html  utils.html
_sources/: index.rst.txt
_sources/_autosummary/: pirogue.MultipleInheritance.rst.txt  pirogue.SimpleJoins.rst.txt  (+8 more)
docs/: build-deploy.sh  build_deploy.sh  conf.py  index.rst
pirogue/: __init__.py  cli.py  exceptions.py  information_schema.py  join.py  merge.py  merge_new.py  multiple_inheritance.py  simple_joins.py  single_inheritance.py  utils.py
scripts/: pirogue  pirogue.py
test/: demo_data.sql  merge.yaml  merge_columns_order.yaml  merge_simple.yaml  merge_sql_def.yaml  simple_joins.yaml  simple_joins_based_on_view.yaml  test_join.sh  test_merge.py  test_merge.sh  test_multiple_inheritance.py  test_pirogue.sh  test_simple_inheritance.sh  test_simple_joins.py
(+3 files in other folders)
